# Qt-Fluent-Widgets

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
app/common/: app_config.cpp  app_config.h
app/resources/images/: logo.icns
app/view/: dialog_interface.cpp  gallery_interface.cpp  icon_interface.cpp
docs/: README_zh.md
qtfluentwidgets/: CMakeLists.txt
qtfluentwidgets/common/: animation.cpp  animation.h  color.cpp  config.cpp  icon.cpp  icon.h  qtcompat.h  smooth_scroll.cpp  style_sheet.cpp
qtfluentwidgets/components/date_time/: calendar_view.cpp  picker_base.cpp  picker_base.h
qtfluentwidgets/components/dialog_box/: dialog.cpp  folder_list_dialog.cpp  folder_list_dialog.h
qtfluentwidgets/components/navigation/: breadcrumb.cpp  breadcrumb.h  navigation_widget.cpp  navigation_widget.h
qtfluentwidgets/components/settings/: expand_setting_card.cpp  expand_setting_card.h
qtfluentwidgets/components/widgets/: button.cpp  button.h  card_widget.cpp  card_widget.h  check_box.cpp  check_box.h  command_bar.cpp  cycle_list_widget.cpp  cycle_list_widget.h  flip_view.cpp  flip_view.h  flyout.cpp  flyout.h  frameless_window.cpp  frameless_window.h  menu.cpp  menu.h  model_combo_box.cpp  model_combo_box.h  pips_pager.cpp  pips_pager.h  progress_bar.cpp  scroll_bar.cpp  scroll_bar.h  slider.cpp  slider.h  state_tool_tip.cpp  state_tool_tip.h  tab_view.cpp  tab_view.h  teaching_tip.cpp  teaching_tip.h  tool_tip.cpp
qtfluentwidgets/components/window/: linux_frameless_window.cpp  linux_frameless_window.h  linux_frameless_window_stub.cpp  mac_frameless_window.mm  title_bar.cpp  title_bar.h  windows_frameless_window.cpp  windows_frameless_window.h  windows_window_effect.cpp  windows_window_effect.h
qtfluentwidgets/resources/: resource.qrc
qtfluentwidgets/window/: fluent_window.cpp  fluent_window.h
